--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -203,6 +203,81 @@
 	<!-- Custom scripts for this template -->
 	<script src="js/creative.min.js"></script>
 
+	<script>
+		var overlap = 0; // 0  중복체크 안함, 1 했고 중복 안됌
+		var passConfirm = 0;
+
+		/* 아이디 중복체크 */
+		function idCheck() {
+			var id = document.getElementById("joinId");
+
+			console.log("idCheck 실행");
+			if (id.value == "") {
+				console.log("null if문 실행")
+				alert('id를 입력해주세요');
+				return;
+			} else if (id.value.match(/[가-힣ㄱ-ㅎㅏ-ㅣ]/)) {
+				alert('아이디는 한글을 제외해 주세요.');
+				return;
+			}
+
+			var req = new XMLHttpRequest();
+			req.onreadystatechange = function() {
+				if (this.readyState == 4 && this.status == 200) {
+					var out = JSON.parse(this.responseText);
+					if (out.result == "yes") {
+						alert('아이디가 존재합니다.');
+					} else {
+						alert('사용 가능한 아이디 입니다.');
+						overlap = 1; // 중복체크 완료
+						var checkbutton = document
+								.getElementById("checkButton");
+						checkbutton.className += " disabled";
+						id.disabled = true;
+						console.log('버튼 비활성화 완료');
+						document.getElementById("tempId").value = id.value;
+					}
+				}
+			}
+			req.open("GET", "./idOverlapCheck.do?check=" + id.value, true);
+			req.send();
+		}
+
+		/* 패스워드 일치 알림 */
+		function passCheck() {
+			var pass1 = $("#pass1").val();
+			var pass2 = $("#pass2").val();
+			if (pass1 != pass2) {
+				$("#passCheckMessage").html("비밀번호와 비밀번호 확인이 일치하지 않습니다.");
+				$("#pass1").addClass("warn");
+				$("#pass2").addClass("warn")
+			} else {
+				$("#passCheckMessage").html("");
+				$("#pass1").removeClass("warn");
+				$("#pass2").removeClass("warn");
+				passConfirm = 1;
+			}
+		}
+
+		/* 가입 버튼 */
+		function join() {
+			var email = $("#inputEmail").val();
+			if (overlap == 0) {
+				alert("id 중복체크를 해주세요.");
+				return false;
+			} else if (passConfirm == 0) {
+				alert("비밀번호가 일치하지 않습니다.");
+				return false;
+			} else if (email == "") {
+				console.log(email);
+				alert("이메일을 입력해 주세요.");
+				return false;
+			} else if (overlap == 1 && passConfirm == 1) {
+				$("#joinFomat").submit();
+			}
+		}
+	</script>
+
 	<!-- 로그인(modal) -->
 	<div class="modal" id="loginForm">
 		<div class="modal-dialog">
